<resources>
    <string name="app_name">Check In</string>
    <string name="有新版本啦">爸爸，有新版本啦~</string>
    <string name="我要升级">爹要升级</string>
    <string name="不更新">爹不想升级</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">手机号或工号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_number">手机号或工号不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项必填</string>
    <string name="permission_rationale">"需要有权限访问内置存储，才能正常下载更新。"
    </string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="cancel_updating">更新已取消，下载可以断点更新</string>
    <string name="you_are_using_an_Alpha_Test_application">你安装的是内测版本，添加新功能，但是可能包含不稳定性，请悉知</string>
    <string name="you_are_using_data_now">爸爸，你现在正在使用的是流量！！！</string>
    <string name="update_after_WiFied">那等爸爸下次连上wifi再升级吧</string>
    <string name="I_am_broken">爹没钱</string>
    <string name="I_am_rich">爹有钱</string>
    <string name="cannot_access_external_storage">对不起，不能访问存储器，请检查内存卡或内置存储</string>
    <string name="newer_version_detected">检测到新版本</string>
    <string name="size">大小：</string>
    <string name="newer_version_description">\n\n更新描述：</string>
    <string name="Are_you_sure">你确定吗？</string>
    <string name="downloading">下载中ing</string>
    <string name="download_begins">下载开始</string>
    <string name="please_wait_a_second">"请稍候     "</string>
    <string name="error_in_downloading">下载出错啦~~</string>
    <string name="download_canceled">下载已取消，已下载的部分不会删除，以便下次断点续传</string>
    <string name="shortcut_created">已创建快捷方式</string>
    <string name="getting_location">正在获取您当前位置</string>
    <string name="check_in">签到</string>
    <string name="dont_rush">不要着急，不要猛戳</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="verification_code">验证码</string>
    <string name="find_psw">找回密码</string>
    <string name="server_error">服务器异常</string>
    <string name="server_busy">服务器正忙，请稍候重试</string>
    <string name="Invalide_phone_jobnumber">手机号或工号错误</string>
    <string name="input_phonenumber">请输入手机号</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="historical_record">历史记录</string>
    <string name="Me">我</string>
    <string name="check_out">签出</string>
    <string name="log_in">登录</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_low_battery_list_titles">
        <item>停用GPS</item>
        <item>停用后台服务</item>
    </string-array>
    <string-array name="pref_low_battery_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_style_titles">
        <item>哔哩粉</item>
        <item>知乎蓝</item>
    </string-array>
    <string-array name="pref_style_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="not_connected_to_server">您的设备未连接至网络</string>
    <string name="must_upgrade">爸爸，此版本包含重大更新，必须要升级！</string>
    <string name="press_one_more_time">再按一次返回桌面</string>

    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="multiple_include_own">Multiple with own License</string>
    <string name="multiple_programmatic">Multiple programmaticly</string>
    <string name="single_fragment">Single (Fragment)</string>
    <string name="multiple_fragment">Multiple (Fragment)</string>
    <string name="multiple_include_own_fragment">Multiple with own License (Fragment)</string>
    <string name="multiple_programmatic_fragment">Multiple programmaticly (Fragment)</string>
    <string name="custom_theme">Custom theme</string>
    <string name="custom_theme_fragment">Custom theme (Fragment)</string>
    <string name="custom_css_style">Custom CSS Style</string>
    <string name="custom_css_style_fragment">Custom CSS Style (Fragment)</string>

    <string name="rgba_background_format">background-color:rgba(%1$d,%2$d,%3$d,%4$1f);</string>
    <string name="shareLocationPrompt">123132</string>
    <string name="conntent"><![CDATA[Let Google help apps determine location. <b>This means sending anonymous location data to Google</b>, even when no apps are running.]]></string>
    <string name="agree">agree</string>
    <string name="disagree">disagree</string>

</resources>
