<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_phone_number"
                android:textColorHint="@color/colorGray"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/send_verification_code"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_below="@+id/textInputLayoutName"
            android:layout_alignRight="@+id/textInputLayoutName"
            android:layout_alignEnd="@+id/textInputLayoutName"
            android:onClick="sendVerificationCode"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:orientation="horizontal"
            android:layout_alignTop="@+id/button_send_verification_code"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <EditText
                android:id="@+id/editText_verification_code"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:textColorHint="@color/colorGray"
                android:layout_alignBaseline="@+id/button_send_verification_code"
                android:layout_alignBottom="@+id/button_send_verification_code"
                android:layout_alignLeft="@+id/textInputLayoutName"
                android:layout_alignStart="@+id/textInputLayoutName"
                android:layout_toStartOf="@+id/button_send_verification_code"
                android:layout_toLeftOf="@+id/button_send_verification_code"/>


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_findPSW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/find_psw"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_below="@+id/button_send_verification_code"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="52dp"
            android:onClick="findPSW"/>

    </RelativeLayout>

</RelativeLayout>